2014-01-09  Tom Tromey  <tromey@redhat.com>

	* target.h: Include target/target.h.
	(target_read_memory, target_write_memory): Don't declare.
	* target.c (target_read_uint32): New function.
	* common/agent.c: Don't include server.h or defs.h; update
	includes.
	(agent_get_helper_thread_id): Use target_read_uint32.
	(agent_run_command): Always use target_write_memory,
	target_read_memory.
	(agent_capability_check): Use target_read_uint32.
	* target/target.h: New file.

2014-01-09  Tom Tromey  <tromey@redhat.com>

	* btrace.c: Include defs.h.
	* common/btrace-common.h: Don't include server.h or defs.h.

2014-01-09  Tom Tromey  <tromey@redhat.com>

	* common/linux-ptrace.c: Don't include server.h or defs.h; update
	includes.

2014-01-09  Tom Tromey  <tromey@redhat.com>

	* utils.c (debug_vprintf): New function.
	* common/agent.c (debug_agent_print): New function.
	(DEBUG_AGENT): Redefine.
	* common/errors.h (debug_vprintf): Define.

2014-06-18  Tom Tromey  <tromey@redhat.com>

	* common/buffer.c: Don't include server.h or defs.h; update
	includes.
	* common/common-utils.c: Don't include server.h or defs.h; update
	includes.
	* common/filestuff.c: Don't include server.h or defs.h; update
	includes.
	* common/filestuff.h: Include stdio.h.
	* common/format.c: Don't include server.h or defs.h; update
	includes.
	* common/gdb_vecs.c: Don't include server.h or defs.h; update
	includes.
	* common/linux-osdata.c: Don't include server.h or defs.h; update
	includes.
	* common/linux-procfs.c: Don't include server.h or defs.h; update
	includes.
	* common/signals.c: Don't include server.h or defs.h; update
	includes.
	* common/vec.c: Don't include server.h or defs.h; update includes.
	* common/xml-utils.c: Don't include server.h or defs.h; update
	includes.

2014-06-18  Tom Tromey  <tromey@redhat.com>

	* common/common-types.h: New file.
	* common/linux-ptrace.c: Include common-types.h.
	* defs.h: Include common-types.h.