@@ -1,3 +1,12 @@
+2014-06-18  Tom Tromey  <tromey@redhat.com>
+
+	* target/target.h (target_resume, target_wait, target_stop)
+	(non_stop): Moved from target.h.
+	* target.h (target_resume, target_wait, target_stop, non_stop):
+	Move to target/target.h.
+	* common/agent.c (agent_run_command): Always use target_resume,
+	target_stop, and target_wait.
+
 2014-01-09  Tom Tromey  <tromey@redhat.com>
 
 	* target.h: Include target/target.h.
